TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "131442034237184" [label="Start"];
  "131442034237184" -> "131442034242944";
  "131442034242944" [label="Code"];
  "131442034242944" -> "131442034243088";
  "131442034243088" [label="Function"];
  "131442034243088" -> "131442034243184";
  "131442034243088" -> "131442034243232";
  "131442034243088" -> "131442034243280";
  "131442034243184" [label="main IDENTIFIER"];
  "131442034243232" [label="Parameters"];
  "131442034243280" [label="Code"];
  "131442034243280" -> "131442034243376";
  "131442034243280" -> "131442034243424";
  "131442034243376" [label="Code"];
  "131442034243376" -> "131442034243472";
  "131442034243472" [label="Declaration"];
  "131442034243472" -> "131442034243568";
  "131442034243472" -> "131442034243616";
  "131442034243568" [label="x IDENTIFIER"];
  "131442034243616" [label="1 INT"];
  "131442034243424" [label="Code"];
  "131442034243424" -> "131442034243664";
  "131442034243664" [label="Declaration"];
  "131442034243664" -> "131442034243760";
  "131442034243664" -> "131442034243808";
  "131442034243760" [label="x IDENTIFIER"];
  "131442034243808" [label="2 INT"];
}
